feat: implement network, secrets and labels
